# football_mpp

./: .gitignore  A_LIRE_DEPLOIEMENT.md  DEPLOYMENT.md  LANCER_LE_SITE.bat  Procfile  README.md  pyproject.toml  render.yaml  requirements.txt
config/: params.yaml
data/: fatigue_overrides.example.csv
examples/: auto_fatigue.py  bilan.py  bilan_poules.py  bilan_site.py  calibrate.py  extract_features.py  magic_predict.py  make_fatigue_template.py  predict_match.py  predict_mpp.py  run_backtest.py  run_prediction.py  simulate_my_matches.py  test_fatigue_impact.py
src/mpp_predictor/: __init__.py  config.py
src/mpp_predictor/decision/: backtester.py  calibration.py  mpp_odds_optimizer.py  mpp_optimizer.py
src/mpp_predictor/features/: attack_index.py  defense_index.py  elo.py  fitness.py  models.py
src/mpp_predictor/ingestion/: loaders.py  results_loader.py
src/mpp_predictor/model/: expected_goals.py  poisson_engine.py  predict.py
tests/: test_core.py
web/: app.py  flags.py  jerseys.py
web/static/: bracket.html  index.html
