[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mpp-predictor"
version = "0.1.0"
description = "Modèle prédictif pour Mon Petit Prono (Coupe du Monde) — Super-Index dynamiques + Poisson + optimisation d'espérance de points."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.1"]
web = ["flask>=3.0", "gunicorn>=21.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"
